# rpi-lgpio

./: .readthedocs.yaml  LICENSE.txt  Makefile  README.rst  setup.cfg
RPi/: GPIO.py
RPi/GPIO/: __init__.py
docs/: Makefile  api.rst  changelog.rst  conf.py  differences.rst  index.rst  install.rst  license.rst
docs/_static/: style_override.css
scripts/: copyrights  previewer
