[metadata]
name = rpi-lgpio
version = 0.3
description = A compatibility shim between RPi.GPIO and lgpio
long_description = file:README.rst
author = Dave Jones
author_email = dave@waveform.org.uk
url = https://rpi-lgpio.readthedocs.io/
project_urls =
    Documentation = https://rpi-lgpio.readthedocs.io/
    Source Code = https://github.com/waveform80/rpi-lgpio
    Issue Tracker = https://github.com/waveform80/rpi-lgpio/issues
keywords = raspberrypi gpio lgpio rpi-gpio
license = BSD-3-Clause
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: System :: Hardware
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx
    sphinx-rtd-theme

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = RPi
branch = true

[coverage:report]
ignore_errors = true
show_missing = true
exclude_lines =
    pragma: no cover
    assert False
    raise NotImplementedError
    pass

[copyrights:settings]
include =
    **/*.py
    **/*.rst
exclude =
    docs/license.rst
license = LICENSE.txt

[previewer:settings]
command = make -C docs html
html = build/html
watch =
    RPi/*.py
    docs/*.rst
